--- a/P3/www/static/css/producto-imprimir.css
+++ b/P3/www/static/css/producto-imprimir.css
@@ -9,6 +9,11 @@ a{
     color: black;
 }
 
+/* Configuración de inicialización de usuarios */
+.prueba1{
+    display: none;
+}
+
 /* Configuración del logo de la cabecera */
 .logo{
     max-width: 65%;
