--- a/P3/www/templates/portada.html
+++ b/P3/www/templates/portada.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <head>
+    <head>	
         <title>Padel Granada Web</title>
         <!-- Ruta relativa del fichero de style (style.css) -->
         {% block css %}
@@ -7,10 +7,19 @@
         {% endblock %}
     </head>
 
+    <!-- Bloque pie de usuarios -->
+	    <div class="prueba1">
+			<p>
+				Prueba de inicializar usuarios
+			</p>
+        </div>
+    <!-- Fin Bloque pie de usuarios -->
     
     <body>
+        
+        
         <!-- Bloque cabecera -->
-        <div class="header"> <!-- Otra opción habrái sido poner header -->
+        <div class="header"> <!-- Otra opción habría sido poner header -->
             <!-- Contenedor logo de la cabecera -->
             <div class="logo">
                 <img src="../images/logo.png"/>
