--- a/P3/www/static/css/producto.css
+++ b/P3/www/static/css/producto.css
@@ -16,6 +16,17 @@ a{
     display: flex;
 }
 
+/* Configuración de inicialización de usuarios */
+.prueba1{
+    float:right;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    color: white;
+    background-color: black;
+    margin-bottom: 10px;
+}
+
 /* Configuración del logo de la cabecera */
 .logo{
     text-align: center;
