--- a/P3/www/templates/producto.html
+++ b/P3/www/templates/producto.html
@@ -69,7 +69,7 @@
     &nbsp;  
     <a href="https://facebook.com"><button>Facebook</button></a>   
     &nbsp;         
-    <a href="http://localhost/producto-imprimir.php?id={{ 'idPala' }}"><button>Imprimir</button></a>
+    <a href="http://localhost/producto-imprimir.php?id={{ pala['idPala'] }}"><button>Imprimir</button></a>
     <!-- Fin botones sociales y enlaces del contenedor principal-->
 {% endblock %}
  
