--- a/P4/www/static/css/registrar-usuarios.css
+++ b/P4/www/static/css/registrar-usuarios.css
@@ -1,4 +1,4 @@
- /* Configuración del color de fondo de toda la página */
+/* Configuración del color de fondo de toda la página */
 body{
     background-color: rgb(255, 255, 255);
 }
@@ -17,21 +17,17 @@ a{
     width: 99%;
 }
 
-.mensaje{
-    font-size: small;
-}
-
-.datos_cambiar{
+.datos_registar{
     float:right;
     width: 55.5%;
     font-size:x-large;
 }
 
-.cambiar_un_dato{
+.registrar_un_dato{
     margin-top: 10px;
 }
 
-.boton_cambiar{
+.boton_registrar{
     float:right;
     width: 100%;
     margin-top: 20px;
