--- a/P4/www/templates/login.html
+++ b/P4/www/templates/login.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
   <head>
     <title>Login/registro de usuario</title>
     <!-- Ruta relativa del fichero de style (style.css) -->
@@ -14,7 +14,7 @@
               Iniciar sesión
           </h1>
       </div>
-
+      
       <div class="datos_iniciar">
         <form action="login.php" method="POST">
           <div class="iniciar_un_dato"><label for="Usuario">Usuario</label><br>
@@ -29,7 +29,7 @@
         </form>
 
           <div class="ir_registro">
-            <p>Si no está registrado pulse <a href="http://localhost/usuarios.php">aquí</a></p>
+            <p>Si no está registrado pulse <a href="http://localhost/registrar-usuarios.php">aquí</a></p>
           </div>
       </div>
     </div>
