--- a/P4/www/static/css/portada.css
+++ b/P4/www/static/css/portada.css
@@ -38,14 +38,14 @@ a{
 
 .tipo-usuario{
     float:left;
-    width: 25%;
+    width: 20%;
     height: auto;
     text-align: center;
 }
 
 .boton-datos{
     float:right;
-    width: 15%;
+    width: 10%;
     height: auto;
     text-align: center;
     padding-top: 15px;
@@ -53,6 +53,14 @@ a{
 
 /* Configuración de inicialización de usuarios */
 .boton-usuario{
+    float:right;
+    width: 10%;
+    height: auto;
+    text-align: center;
+    padding-top: 15px;
+}
+
+.boton-permisos{
     float:right;
     width: 10%;
     height: auto;
@@ -235,6 +243,7 @@ a{
     height: auto;
     padding: 10px;
     margin: 10px;
+    margin-bottom: 0px;
     border-radius: 20px;
     background-color: rgb(201, 245, 230);
     color: black;
