--- a/P4/www/templates/producto.html
+++ b/P4/www/templates/producto.html
@@ -8,7 +8,7 @@
 {% block usuarios %}
 <!-- Bloque pie de usuarios -->
 <div class="usuarios">
-	{% if not usuario.user %}
+	{% if not usuario %}
 		<div class="texto-usuario">
 			<p>
 				No estás logueado.
@@ -20,13 +20,22 @@
 		{% else %}
 		<div class="texto-usuario">
 			<p>
-				USUARIO: <strong>{{ usuario.user.nick }}.</strong>
+				USUARIO: <strong>{{ usuario }}</strong>
 			</p>
 		</div>
 
 		<div class="tipo-usuario">
-			{% if usuario.user.super %}
-				<p>Tipo de usuario: Superusuario</p>
+			{% if tipo == 0 %}
+				<p>Tipo de usuario: <strong>Superusuario</strong></p>
+			{% endif %}
+			{% if tipo == 1 %}
+				<p>Tipo de usuario: <strong>Registrado</strong></p>
+			{% endif %}
+			{% if tipo == 2 %}
+				<p>Tipo de usuario: <strong>Moderador</strong></p>
+			{% endif %}
+			{% if    tipo == 3 %}
+				<p>Tipo de usuario: <strong>Gestor</strong></p>
 			{% endif %}
 		</div>
 		
@@ -37,6 +46,11 @@
 		<div class="boton-datos">        
 			<a href="http://localhost/cambiar-datos.php"><button>Cambiar datos</button></a>
 		</div>
+		{% if tipo == 0 %}
+			<div class="boton-permisos">        
+				<a href="http://localhost/gestion-permisos.php"><button>Gestión permisos</button></a>
+			</div>
+		{% endif %}
 	{% endif %}
 </div>
 <!-- Fin Bloque pie de usuarios -->
@@ -70,33 +84,36 @@
 		</div>
 	</div>
 
-	<div class="boton"><button class="boton-comentarios" type="button" id="boton-comentarios">Comentarios</button></div>      
-		<div class="subir-comentarios" id="subir-comentarios">
-			<form>
-				<div><label for="Nombre">Nombre</label><br>
-				<input type="text1" id="boton-nombre" placeholder="Introducir nombre"></div>
-				<div><label for="Email">Correo</label><br>
-				<input type="text2" id="boton-correo" placeholder="Introducir correo"></div>
-				<div><label for="Comentario">Comentarios</label><br>
-				<textarea type="text3" id="boton-comentario" onkeyup="censurar_palabras()" placeholder="Introducir comentario"></textarea>
-				<div>
-					<button class="boton-subir" type="button" id="boton-subir">Subir</button>
+	{% if usuario %}
+		<div class="boton"><button class="boton-comentarios" type="button" id="boton-comentarios">Comentarios</button></div>      
+			<div class="subir-comentarios" id="subir-comentarios">
+				<form>
+					<div><label for="Nombre">Nombre</label><br>
+					<input type="text1" id="boton-nombre" placeholder="Introducir nombre"></div>
+					<div><label for="Email">Correo</label><br>
+					<input type="text2" id="boton-correo" placeholder="Introducir correo"></div>
+					<div><label for="Comentario">Comentarios</label><br>
+					<textarea type="text3" id="boton-comentario" onkeyup="censurar_palabras()" placeholder="Introducir comentario"></textarea>
+					<div>
+						<button class="boton-subir" type="button" id="boton-subir">Subir</button>
+					</div>
+				</form>
+
+				<div class="nuevo-comentario"></div>
+
+				<div class="comentarios" id ="comentarios">
+					<div class="comentario">
+						<div class="subrayar" id="subrayar"><span class="coment" id="coment">Comentario:</span></div>   
+						<p class="nombre" id="nombre">{{ pala['nombre_comentario'] }} <span class="fecha" id="fecha">{{ pala['fecha_comentario'] }}</span></p>
+						<p class="texto">{{ pala['texto_comentario'] }}</p>
+						<button class="boton-cambiar" type="button" id="boton-cambiar">Cambiar</button>
+					</div>
 				</div>
-			</form>
 
-			<div class="nuevo-comentario"></div>
-
-			<div class="comentarios" id ="comentarios">
-				<div class="comentario">
-					<div class="subrayar" id="subrayar"><span class="coment" id="coment">Comentario:</span></div>                        
-					<p class="nombre" id="nombre">{{ pala['nombre_comentario'] }} <span class="fecha" id="fecha">{{ pala['fecha_comentario'] }}</span></p>
-					<p class="texto">{{ pala['texto_comentario'] }}</p>
-				</div>
-			</div>
-
-			<script src="static/js/producto.js"></script>
+				<script src="static/js/producto.js"></script>
+			</div> 
 		</div>
-	</div>
+		{% endif %}
 </div>
 {% endblock %}
 
