--- a/P4/www/static/css/producto.css
+++ b/P4/www/static/css/producto.css
@@ -157,7 +157,6 @@ a{
     float: right;
     width: auto;
     text-decoration: underline;
-    padding-left: 20px;
 }
 
 .nombre{
@@ -180,6 +179,32 @@ a{
     height: auto;
     text-align: center;
 }
+
+.etiquetas{
+    float: right;
+    margin: 10px;
+    width: 100%;
+}
+
+.botones-etiquetas{
+    float: right;
+    width: 100%;
+}
+
+.añadir-etiqueta{
+    float: right;
+    width: 33%;
+}
+
+.cambiar-etiqueta{
+    float: right;
+    width: 33%;
+}
+
+.añadir-etiqueta{
+    float: right;
+    width: 33%;
+}
  
 /* Configuración delbotoón que despliega los comentarios */
 .boton-comentarios{
@@ -191,7 +216,7 @@ a{
     border-radius: 20px;
     margin-left: 45%;
     padding: 1%;
-    margin-bottom: 10px;
+    margin-top: 30px;
 }
 
 .boton-subir{
