--- a/P4/www/templates/cambiar-etiqueta.html
+++ b/P4/www/templates/cambiar-etiqueta.html
@@ -14,6 +14,13 @@
           </h1>
       </div>
 
+      <div class="etiquetas">
+        <p>Etiquetas de este producto:</p>
+        {% for i in etiquetas %}
+          <p>* {{ i }}</p>
+        {% endfor %}
+      </div>
+
       <div class="datos_cambiar">
         <form action="cambiar-etiqueta.php" method="POST">
           <div class="cambiar_un_dato"><label for="Nombre">Etiqueta Nueva</label><br>
