--- a/P4/www/templates/eliminar-etiqueta.html
+++ b/P4/www/templates/eliminar-etiqueta.html
@@ -14,6 +14,13 @@
         </h1>
       </div>
 
+      <div class="etiquetas">
+        <p>Etiquetas de este producto:</p>
+        {% for i in etiquetas %}
+          <p>* {{ i }}</p>
+        {% endfor %}
+      </div>
+
       <div class="datos_eliminar">
         <form action="eliminar-etiqueta.php" method="POST">
           <div class="eliminar_un_dato"><label for="Nombre">Etiqueta</label><br>
