Añadidos las modificaciones y eliminaciones de los comentarios

--- a/P4/www/static/css/producto.css
+++ b/P4/www/static/css/producto.css
@@ -148,21 +148,9 @@ a{
 } 
 
 .subrayar-comentario{
-    float: right;
-    width: auto;
+    float: left;
     text-decoration: underline;
 } 
-
-.boton-cambiar{
-    float: right;
-    width: auto;
-    text-decoration: underline;
-}
-
-.nombre{
-    float: right;
-    width: 100%;
-}
 
 
 /* Configuración del texto del producto */
