--- a/P4/www/templates/gestion-permisos.html
+++ b/P4/www/templates/gestion-permisos.html
@@ -45,5 +45,9 @@
         </div>
       </div>
     </div>
+    
+    <div class="leyenda">
+      <p>Tipos usuarios: 0 => Superusuario, 1 => Registrado, 2 => Moderador y 3 => Gestor</p>
+    </div>
   </body>
 </html>
